--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "CDN Bakery Chat",
   "short_name": "CDN Bakery",
   "description": "CDN Bakery Chat — мобильная версия",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/chatpage/",
+  "scope": "/chatpage/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#1a1a2e",
